--- a/layout/pages/sala.html
+++ b/layout/pages/sala.html
@@ -143,7 +143,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-       Buscar salas
+       Reservar Sala
       </h1>
     </section>
 
@@ -155,97 +155,157 @@ scratch. This page gets rid of all links and provides the needed markup only.
             <div class="col-md-12">
               <div class="panel panel-primary">
                 <div class="panel-heading">
-                  <h4>Salas</h4>
+                  <h3 style="text-align: center;">Sala 109 - PAF 1</h3>
                 </div>
                 <div class="panel-body">
-                    <form method="POST" action="">
-                    	<div class="box-tools">
-                   	  <div class="input-group input-group-sm" >
-                    		<div class="form-group">
-
-                  <div class="col-md-3">
-                    <label>Pavilhão:</label>
-                    <select class="form-control">
-                      <option>-- Pavilhão --</option>
-                      <option value="1">Pavilhão 1</option>
-                      <option value="2">Pavilhão 3</option>
-                      <option value="3">Pavilhão 5</option>
-                      <option value="4">IME</option>
-                    </select>
-                  </div>
-
-                  <div class="col-md-3">
-                    <label>Capacidade Máxima:</label>
-                    <div class="input-group">
-                      <input type="text" class="form-control">
-                      <div class="input-group-addon">
-                      </div>
-                    </div>
-                    <!-- /.input group -->
-                  </div>
-
-                  <div class="col-md-3">
-                    <label>Tipo da Sala:</label>
-                    <select class="form-control">
-                      <option>-- Tipo --</option>
-                      <option value="1">Tipo 1</option>
-                      <option value="2">Tipo 2</option>
-                      <option value="3">Tipo 3</option>
-                    </select>
-                  </div>
-
-                  <div class="col-md-3">
-                    <button type="button" class="btn btn-primary pull-right" style="margin-top: 25px;">Pesquisar</button>
-                  </div>
-
-
-                </div>
-                    	  </div>
-                    	</div><br>
-                    </form>
+                  
                   <div class="box-body table-responsive no-padding">
-                    <table class="table table-bordered table-hover">
+                    <table class="table table-bordered">
                       <tr>
-                        <th>Número</th>
-                        <th>Local</th>
-                        <th>Tipo</th>
-                        <th>Cadeiras</th>
-                        <!-- <th>Status</th> -->
-                        <th>Reserva</th>
+                        <th>Período</th>
+                        <th>Segunda</th>
+                        <th>Terça</th>
+                        <th>Quarta</th>
+                        <th>Quinta</th>
+                        <th>Sexta</th>
                       </tr>
                       <tr>
-                        <td>133</td>
-                        <td>IM</td>
-                        <td>Laboratório</td>
-                        <td>40</td>
-                        <!-- <td><span class="label label-success">Disponível</span></td> -->
-                        <td><button type="button" class="btn btn-primary"><a href="sala.html" style="color: white;">Solicitar</a></button></td>
+                        <td>07:00 - 07:55</td>
+                        <td style="background-color: #3A539B; text-align: center; font-size: 15px;"><a href="#" style="display:block; text-decoration:none; color: white;">MATA63</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
                       </tr>
                       <tr>
-                        <td>28</td>
-                        <td>PAF III</td>
-                        <td>Sala de aula</td>
-                        <td>60</td>
-                        <!-- <td><span class="label label-danger">Reservada</span></td>
-                        <td><button type="button" class="btn btn-danger">Sala Reservada</button></td> -->
-                        <td><button type="button" class="btn btn-primary"><a href="sala.html" style="color: white;">Solicitar</a></button></td>
+                        <td>07:55 - 08:50</td>
+                        <td style="background-color: #3A539B; text-align: center; font-size: 15px;"><a href="#" style="display:block; text-decoration:none; color: white;">MATA63</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
                       </tr>
                       <tr>
-                        <td>133</td>
-                        <td>IM</td>
-                        <td>Laboratório</td>
-                        <td>30</td>
-                        <!-- <td><span class="label label-success">Disponível</span></td> -->
-                        <td><button type="button" class="btn btn-primary"><a href="sala.html" style="color: white;">Solicitar</a></button></td>
+                        <td>08:50 - 09:45</td>
+                        <td style="background-color: #3A539B; text-align: center; font-size: 15px;"><a href="#" style="display:block; text-decoration:none; color: white;">MATA59</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
                       </tr>
                       <tr>
-                        <td>259</td>
-                        <td>PAF 1</td>
-                        <td>Sala de aula</td>
-                        <td>50</td>
-                        <!-- <td><span class="label label-success">Disponível</span></td> -->
-                        <td><button type="button" class="btn btn-primary"><a href="sala.html" style="color: white;">Solicitar</a></button></td>
+                        <td>09:45 - 10:40</td>
+                        <td style="background-color: #3A539B; text-align: center; font-size: 15px;"><a href="#" style="display:block; text-decoration:none; color: white;">MATA59</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
                       </tr>
+                      <tr>
+                        <td>10:40 - 11:35</td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td style="background-color: #3A539B; text-align: center; font-size: 15px;"><a href="#" style="display:block; text-decoration:none; color: white;">MATA01</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                      </tr>
+                      <tr>
+                        <td>11:35 - 12:30</td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td style="background-color: #3A539B; text-align: center; font-size: 15px;"><a href="#" style="display:block; text-decoration:none; color: white;">MATA01</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                      </tr>
+                      <tr>
+                        <td>INTERVALO</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                      </tr>
+                      <tr>
+                        <td>13:00 - 13:55</td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                      </tr>
+                      <tr>
+                        <td>13:55 - 14:50</td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                      </tr>
+                      <tr>
+                        <td>14:50 - 15:45</td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                      </tr>
+                      <tr>
+                        <td>15:45 - 16:40</td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                      </tr>
+                      <tr>
+                        <td>16:40 - 17:35</td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                      </tr>
+                      <tr>
+                        <td>17:35 - 18:30</td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                      </tr>
+                      <tr>
+                        <td>18:30 - 19:25</td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                      </tr>
+                      <tr>
+                        <td>19:25 - 20:20</td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                      </tr>
+                      <tr>
+                        <td>20:20 - 21:15</td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                      </tr>
+                      <tr>
+                        <td>21:15 - 22:10</td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                        <td><a href="#" style="display:block; text-decoration:none;">&nbsp;</a></td>
+                      </tr>
+
                     </table>
 		  </div>
                 </div>
@@ -253,7 +313,71 @@ scratch. This page gets rid of all links and provides the needed markup only.
             </div>
           </div>
         </div>
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="exampleModalLabel">Cadastro</h4>
+      </div>
+      <div class="modal-body" style="padding: 0px;">
+        <form>
+          <div class="form-group">
 
+                  <div class="col-md-12">
+                    <label>Equipamentos</label>
+                    <select class="form-control">
+                      <option>Equipamento 1</option>
+                      <option>Equipamento 2</option>
+                      <option>Equipamento 3</option>
+                      <option>Equipamento 4</option>
+                      <option>Equipamento 5</option>
+                    </select>
+                  </div>
+
+                  <div class="bootstrap-timepicker col-md-12">
+                    <label>Horário de Entrada:</label>
+
+                    <div class="input-group">
+                      <input type="text" class="form-control timepicker">
+
+                      <div class="input-group-addon">
+                        <i class="fa fa-clock-o"></i>
+                      </div>
+                    </div>
+                    <!-- /.input group -->
+                  </div>
+
+                  <div class="alert alert-dismissible alert-danger col-md-12">
+                    <button type="button" class="close" data-dismiss="alert">&times;</button>
+                    <strong>Horário Já Reservado.</strong>
+                  </div>
+
+                  <div class="bootstrap-timepicker col-md-12">
+                    <label>Horário de Saída:</label>
+
+                    <div class="input-group">
+                      <input type="text" class="form-control timepicker">
+
+                      <div class="input-group-addon">
+                        <i class="fa fa-clock-o"></i>
+                      </div>
+                    </div>
+                    <!-- /.input group -->
+                  </div>
+
+
+
+                </div>
+        </form>
+      </div>
+      <div class="col-md-12" style="height: 10px;"></div>
+      <div class="modal-footer" style="border-top: 0px">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+        <button type="button" class="btn btn-primary" data-dismiss="modal">Confirmar</button>
+      </div>
+    </div>
+  </div>
 </div>
     </section>
     <!-- /.content -->
